# data-name-change-checker

./: .gitignore  README.md  README_template.md  name-change-checker.py  pyproject.toml
.github/workflows/: check_for_dept_name_changes.yml
data/: official_titles-tester.csv  official_titles.csv
