[project]
name = "name-change-checker"
version = "0.0.1"
description = "Checks for changes to to the official titles of Government of Canada departments and agencies using an Open Government data set"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "tabulate",  # for pd.DataFrame.to_markdown
    "pandas"
]

[dependency-groups]
dev = ["ruff"]

[tool.uv]
managed = true
required-version = ">=0.5.0"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["F", "UP", "B018", "I", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
